--- a/src/main/resources/templates/personalView.html
+++ b/src/main/resources/templates/personalView.html
@@ -31,7 +31,7 @@
 <main th:fragment="bodycontent">
     <!-- Restlichen Inhalt hier einfügen! -->
     <h1 class="text-center text-secondary">Belegte Veranstaltungen</h1>
-    <div th:if="${hasEvents}">
+    <div th:if="${exists}">
         <div th:remove="all-but-first" th:each="eventAndStatus : ${studentEvents}">
             <div class="container bg-light rounded shadow "
                  style="padding: 10px; margin-top: 40px; margin-bottom: 40px">
@@ -356,7 +356,8 @@
             </div>
         </div>
     </div>
-    <div th:unless="${hasEvents}" class="container">
+    <div class=" container bg-light rounded shadow " style="padding: 10px; margin-top: 40px; margin-bottom: 40px"
+         th:unless="${exists}">
         <div class="row border-bottom  mx-1 my-md-5 justify-content-center">
             <p class="font-weight-bold text-dark"> Sie haben sich für keine Veranstaltungen
                 angemeldet! </p>
