fix date format

--- a/src/main/resources/templates/student_events_overview.html
+++ b/src/main/resources/templates/student_events_overview.html
@@ -67,7 +67,7 @@
                     <div class="row">
                         <div class="col-12">
                             <i class="icono-calendar"></i>
-                            <span th:text="${#temporals.format(event.date.toLocalDate(), 'yyyy.MM.dd')}">&nbsp;13.03.2020</span>
+                            <span th:text="${#temporals.format(event.date.toLocalDate(), 'dd.MM.yyyy')}">&nbsp;13.03.2020</span>
                         </div>
                     </div>
                 </div>
