Edit reportSubmit in StudentController  and personalView.html

--- a/src/main/resources/templates/personalView.html
+++ b/src/main/resources/templates/personalView.html
@@ -82,7 +82,8 @@
                         <div class="row text-light justify-content-around mx-1 ">
                             <div class="col-12 mt-2">
                                 <a class="btn btn-outline-success btn-block" href="/rheinjug2/student/reportsubmit"
-                                   role="button">
+                                   role="button"
+                                   th:href="@{'/rheinjug2/student/reportsubmit/' + ${eventAndStatus.key.id}}">
                                     Zusammenfassung abgeben
                                 </a>
                             </div>
