--- a/src/main/resources/templates/orga_reports_overview.html
+++ b/src/main/resources/templates/orga_reports_overview.html
@@ -30,10 +30,13 @@
         <!-- Navigation als ungeordnete Liste mit einfachen Links hier einfügen! -->
         <ul>
             <li>
-                <a th:href="@{/rheinjug2/orga/events}"> Veranstaltugen Übersicht </a>
+                <a th:href="@{/rheinjug2/orga/events}"> Veranstaltungen Übersicht </a>
             </li>
             <li class="active">
                 <a th:href="@{/rheinjug2/orga/reports}"> Bewertung Anfragen </a>
+            </li>
+            <li>
+                <a th:href="@{/rheinjug2/orga/delayedSubmission}"> Verspätete Abgabe hochladen </a>
             </li>
         </ul>
     </nav>
@@ -62,11 +65,11 @@
             <div class="row border-bottom  mx-1 my-1">
                 <div class="col-12 col-sm-6 border-right text-secondary my-1">
                     <span>Abgabe Frist:</span>
-                    <span th:text="${#temporals.format(summary.getSubmissionDeadline(), 'yyyy.MM.dd HH:mm')}">&nbsp;15.03.2020</span>
+                    <span th:text="${#temporals.format(summary.getSubmissionDeadline(), 'dd.MM.yyyy HH:mm')}">&nbsp;15.03.2020</span>
                 </div>
                 <div class="col-12 col-sm-6 border-right text-secondary my-1">
                     <span>hochgeladen am:</span>
-                    <span th:text="${#temporals.format(summary.getTimeOfSubmission(), 'yyyy.MM.dd HH:mm')}"
+                    <span th:text="${#temporals.format(summary.getTimeOfSubmission(), 'dd.MM.yyyy HH:mm')}"
                           th:classappend="${summary.getTimeOfSubmission().isAfter(summary.getSubmissionDeadline())} ? 'text-danger' : 'text-success'">
                         &nbsp;12.03.2020</span>
                     <small class="text-danger"
