fix overview name

--- a/src/main/resources/templates/student_events_overview.html
+++ b/src/main/resources/templates/student_events_overview.html
@@ -24,7 +24,7 @@
                     Übersicht</a>
             </li>
             <li>
-                <a th:href="@{/rheinjug2/student/events}"> Veranstaltugen Übersicht </a>
+                <a th:href="@{/rheinjug2/student/events}"> Veranstaltungen Übersicht </a>
             </li>
             <li class="active">
                 <a th:href="@{/rheinjug2/student/visitedevents}"> belegte Veranstaltungen</a>
