--- a/src/main/resources/templates/orga_delayed_submission.html
+++ b/src/main/resources/templates/orga_delayed_submission.html
@@ -21,6 +21,12 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
                 integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
                 crossorigin="anonymous"></script>
+        <script>
+            $(document).ready(function () {
+                $(".collapse.show").removeClass("show");
+                $(".collapsebtn").css("display", "block");
+            });
+        </script>
 
     </th:block>
 </head>
@@ -33,7 +39,8 @@
                 <a th:href="@{/rheinjug2/orga/events}"> Veranstaltungen Übersicht </a>
             </li>
             <li>
-                <a th:href="@{/rheinjug2/orga/reports}"> Bewertung Anfragen </a>
+                <a class="col-12" th:href="@{/rheinjug2/orga/reports}"> Bewertung Anfragen &emsp; &emsp; <span
+                        class=" badge badge-primary badge-pill">14</span></a>
             </li>
             <li class="active">
                 <a th:href="@{/rheinjug2/orga/delayedSubmission}"> Verspätete Abgabe hochladen </a>
@@ -59,10 +66,10 @@
                 </div>
                 <div class="col-12 col-sm-6 border-right text-secondary my-1">
                     <span>Abgabe Frist war am:</span>
-                    <span >&nbsp15.03.2020</span>
+                    <span>&nbsp15.03.2020</span>
                 </div>
             </div>
-            <div class=" row mx-1 my-1">
+            <div class=" row mx-1 my-1 collapsebtn" style="display: none">
                 <div class="col-12 my-1">
                     <button class="btn btn-primary btn-block" type="button" data-toggle="collapse"
                             data-target="#inhalt1"
@@ -73,7 +80,7 @@
                 </div>
             </div>
             <div id="inhalt1" th:id="'inhalt_'+${submission.getStudentId()} + '_' + ${submission.getEventId()}"
-                 class="collapse">
+                 class="collapse show">
                 <div class=" row border-bottom border-top text-secondary mx-1 my-1 ">
                     <div class="col-12 my-1">
                         <span>Inhalt</span>
@@ -86,7 +93,9 @@
                 <div class=" row mx-1 my-1 ">
                     <div class="col-12 my-1 mb-2">
                         <form action="#" method="Get">
-                            <button class="btn btn-success btn-block" type="submit">Zusammenfassung als akzeptiert hochladen</button>
+                            <button class="btn btn-success btn-block" type="submit">Zusammenfassung als akzeptiert
+                                hochladen
+                            </button>
                         </form>
                     </div>
                 </div>
