--- a/src/main/resources/templates/orga_reports_overview.html
+++ b/src/main/resources/templates/orga_reports_overview.html
@@ -41,8 +41,9 @@
                 <a th:href="@{/rheinjug2/orga/events}"> Veranstaltungen Übersicht </a>
             </li>
             <li class="active">
-                <a class="col-12" th:href="@{/rheinjug2/orga/reports}"> Bewertung Anfragen &emsp; &emsp; <span
-                        class=" badge badge-primary badge-pill">14</span></a>
+                <a class="col-12" th:href="@{/rheinjug2/orga/reports}"> Bewertung Anfragen &emsp; &emsp;
+                    <span class=" badge badge-primary badge-pill" th:text="${numberOfEvaluationRequests}">14</span>
+                </a>
             </li>
             <li>
                 <a th:href="@{/rheinjug2/orga/delayedSubmission}"> Verspätete Abgabe hochladen </a>
