fix typo in credit_points_apply.html

--- a/src/main/resources/templates/credit_points_apply.html
+++ b/src/main/resources/templates/credit_points_apply.html
@@ -53,7 +53,7 @@
             </tbody>
         </table>
         <div th:if="${useForCP}">
-            <button type="submit" class="btn col-12 btn-outline-success"> 0.5 CP Bentagen</button>
+            <button type="submit" class="btn col-12 btn-outline-success"> 0.5 CP Beantragen</button>
         </div>
         <div th:unless="${useForCP}">
             <div class="alert alert-danger text-center">
