--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,11 @@
     <title>Java in der Praxis</title>
     <th:block th:fragment="headcontent">
         <!-- Links, Skripts, Styles hier einfügen! -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+              crossorigin="anonymous"
+              th:remove="all">
+        <link rel="stylesheet" href="https://icono-49d6.kxcdn.com/icono.min.css" th:remove="all">
     </th:block>
 </head>
 <body>
@@ -40,7 +45,7 @@
             <div class="col-6 col-sm-3  border-right my-1">
                 <div class="row ">
                     <div class="col-12">
-                        <img src="/icons/icon-credit.png" style="width: 32px;height: 28px;" >
+                        <img src="/icons/icon-credit.png" style="width: 32px;height: 28px;">
                         <span class="text-secondary"><sup>1</sup>/<sub>2</sub> CP</span>
                     </div>
                 </div>
@@ -48,7 +53,7 @@
             <div class="col-6 col-sm-3 border-right my-1">
                 <div class="row">
                     <div class="col-12">
-                        <img src="/icons/icon-payment.png"style="width: 32px;height: 28px;">
+                        <img src="/icons/icon-payment.png" style="width: 32px;height: 28px;">
                         <span class="text-success">&nbsp;kostenfrei</span>
                     </div>
                 </div>
@@ -70,9 +75,12 @@
                 </div>
                 <div class="text-secondary">
                     <p>
-                        Bisher wird die Java Enterprise Welt von zwei Frontendtechnologien beherrscht: Java Server Pages (JSP)
+                        Bisher wird die Java Enterprise Welt von zwei Frontendtechnologien beherrscht: Java Server Pages
+                        (JSP)
                         und Java Server Faces (JSF). Beide Technologien folgen Paradigmen, welche die Anforderungen
-                        an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API 1.0 soll dieses Problem gelöst <werden class=""></werden>
+                        an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API 1.0 soll
+                        dieses Problem gelöst
+                        <werden class=""></werden>
                     </p>
                 </div>
             </div>
@@ -107,7 +115,7 @@
             <div class="col-6 col-sm-3  border-right my-1">
                 <div class="row ">
                     <div class="col-12">
-                        <img src="/icons/icon-credit.png" style="width: 32px;height: 28px;" >
+                        <img src="/icons/icon-credit.png" style="width: 32px;height: 28px;">
                         <span class="text-secondary">&nbsp;<sup>1</sup>/<sub>2</sub> CP</span>
                     </div>
                 </div>
@@ -115,7 +123,7 @@
             <div class="col-6 col-sm-3 border-right my-1">
                 <div class="row">
                     <div class="col-12">
-                        <img src="/icons/icon-payment.png"style="width: 32px;height: 28px;">
+                        <img src="/icons/icon-payment.png" style="width: 32px;height: 28px;">
                         <span class="text-success">&nbsp;kostenfrei</span>
                     </div>
                 </div>
@@ -137,9 +145,12 @@
                 </div>
                 <div class="text-secondary">
                     <p>
-                        Bisher wird die Java Enterprise Welt von zwei Frontendtechnologien beherrscht: Java Server Pages (JSP)
+                        Bisher wird die Java Enterprise Welt von zwei Frontendtechnologien beherrscht: Java Server Pages
+                        (JSP)
                         und Java Server Faces (JSF). Beide Technologien folgen Paradigmen, welche die Anforderungen
-                        an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API 1.0 soll dieses Problem gelöst <werden class=""></werden>
+                        an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API 1.0 soll
+                        dieses Problem gelöst
+                        <werden class=""></werden>
                     </p>
                 </div>
             </div>
@@ -173,7 +184,7 @@
             <div class="col-6 col-sm-3  border-right my-1">
                 <div class="row ">
                     <div class="col-12">
-                        <img src="/icons/icon-credit.png" style="width: 32px;height: 28px;" >
+                        <img src="/icons/icon-credit.png" style="width: 32px;height: 28px;">
                         <span class="text-secondary"> <sup>1</sup>/<sub>2</sub> CP</span>
                     </div>
                 </div>
@@ -181,7 +192,7 @@
             <div class="col-6 col-sm-3 border-right my-1">
                 <div class="row">
                     <div class="col-12">
-                        <img src="/icons/icon-payment.png"style="width: 32px;height: 28px;">
+                        <img src="/icons/icon-payment.png" style="width: 32px;height: 28px;">
                         <span class="text-success">&nbsp;kostenfrei</span>
                     </div>
                 </div>
@@ -203,9 +214,12 @@
                 </div>
                 <div class="text-secondary">
                     <p>
-                        Bisher wird die Java Enterprise Welt von zwei Frontendtechnologien beherrscht: Java Server Pages (JSP)
+                        Bisher wird die Java Enterprise Welt von zwei Frontendtechnologien beherrscht: Java Server Pages
+                        (JSP)
                         und Java Server Faces (JSF). Beide Technologien folgen Paradigmen, welche die Anforderungen
-                        an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API 1.0 soll dieses Problem gelöst <werden class=""></werden>
+                        an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API 1.0 soll
+                        dieses Problem gelöst
+                        <werden class=""></werden>
                     </p>
                 </div>
             </div>
