--- a/src/main/resources/templates/orga_reports_overview.html
+++ b/src/main/resources/templates/orga_reports_overview.html
@@ -56,7 +56,7 @@
     <div id="successmessage" class=" container alert alert-success alert-dismissible"
          style="padding: 10px;"
          role="alert" th:text="${successmessage}"
-         th:if="${successmessage != null }">
+         th:if="${successmessage != ''}">
     </div>
     <div class=" container alert alert-success alert-dismissible"
          style="padding: 10px;"
