--- a/src/main/resources/templates/personalView.html
+++ b/src/main/resources/templates/personalView.html
@@ -65,10 +65,10 @@
                             <div class="col-12">
                                 <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
                                 <span class="text-secondary">
-                                    <span th:if="${eventAndStatus.key.type == 'Abendveranstaltungen'}">
+                                    <span th:if="${eventAndStatus.key.type == 'Abendveranstaltung'}">
                                     &nbsp;<sup>1</sup>/<sub>6</sub>&nbsp;CP</span>
                                     </span>
-                                <span th:if="${eventAndStatus.key.type == 'Entwickelbar'}">
+                                <span th:if="${eventAndStatus.key.type == 'EntwickelBar'}">
                                     &nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
                                 </span>
                             </div>
